fixed margin error pointed by tse

--- a/index.html
+++ b/index.html
@@ -289,19 +289,21 @@
       <section class="section3">
         <h2>Apps</h2>
         <div class="gray">
-      
             <article class="popular">
               <a href="#">
                 <div class="image"></div>
               </a>
-              <header>
-                <h5>Most popular</h5>
-                <h3><a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
+              <header class="mini-text">            
+                <p class="popluarity">
+                  Most popular
+                </p>
+                <h3>
+                  <a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
                 </h3>
-                <ul class="author">
-                  <li><a href="#">Napier Lopez</a></li>
-                  <li>21 hours ago</li>
-                </ul>
+                <div class="mini-mini-text">
+                  <p>Napier Lopez</p>
+                  <p class="hours-ago"> 21 hours ago</p>      
+                </div>
               </header>
             </article>
         </div>
@@ -338,16 +340,18 @@
               <a href="#">
                 <div class="image"></div>
               </a>
-              <header>
-                <h5>Most popular</h5>
-                <h3><a href="#">
-                    I hate Apple for making me shake my MacBook like a chump</a>
-                </h3>
-                <ul class="author">
-                  <li><a href="#">Mix</a></li>
-                  <li>11 hours ago</li>
-                </ul>
-              </header>
+              <header class="mini-text">            
+                  <p class="popluarity">
+                    Most popular
+                  </p>
+                  <h3>
+                    <a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
+                  </h3>
+                  <div class="mini-mini-text">
+                    <p>Napier Lopez</p>
+                    <p class="hours-ago"> 21 hours ago</p>      
+                  </div>
+                </header>
             </article>
         </div>
         <div class="latest">
@@ -383,16 +387,18 @@
               <a href="#">
                 <div class="image"></div>
               </a>
-              <header>
-                <h5>Most popular</h5>
-                <h3><a href="#">
-                    Humility, trust, and empathy: The skills needed to work with robots</a>
-                </h3>
-                <ul class="author">
-                  <li><a href="#">Tim Leberecht</a></li>
-                  <li>11 hours ago</li>
-                </ul>
-              </header>
+              <header class="mini-text">            
+                  <p class="popluarity">
+                    Most popular
+                  </p>
+                  <h3>
+                    <a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
+                  </h3>
+                  <div class="mini-mini-text">
+                    <p>Napier Lopez</p>
+                    <p class="hours-ago"> 21 hours ago</p>      
+                  </div>
+                </header>
             </article>
         </div>
         <div class="latest">
@@ -428,16 +434,18 @@
               <a href="#">
                 <div class="image"></div>
               </a>
-              <header>
-                <h5>Most popular</h5>
-                <h3><a href="#">
-                    This Amazon parody dating site is hilarious... and also kind of creepy</a>
-                </h3>
-                <ul class="author">
-                  <li><a href="#">Rachel Kasser</a></li>
-                  <li>16 days ago</li>
-                </ul>
-              </header>
+              <header class="mini-text">            
+                  <p class="popluarity">
+                    Most popular
+                  </p>
+                  <h3>
+                    <a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
+                  </h3>
+                  <div class="mini-mini-text">
+                    <p>Napier Lopez</p>
+                    <p class="hours-ago"> 21 hours ago</p>      
+                  </div>
+                </header>
             </article>
         </div>
         <div class="latest">
@@ -473,16 +481,18 @@
               <a href="#">
                 <div class="image"></div>
               </a>
-              <header>
-                <h5>Most popular</h5>
-                <h3><a href="#">
-                    How to build a survival base in Minecraft</a>
-                </h3>
-                <ul class="author">
-                  <li><a href="#">Thomas Williamson</a></li>
-                  <li>6 days ago</li>
-                </ul>
-              </header>
+              <header class="mini-text">            
+                  <p class="popluarity">
+                    Most popular
+                  </p>
+                  <h3>
+                    <a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
+                  </h3>
+                  <div class="mini-mini-text">
+                    <p>Napier Lopez</p>
+                    <p class="hours-ago"> 21 hours ago</p>      
+                  </div>
+                </header>
             </article>
         </div>
         <div class="latest">
@@ -518,16 +528,18 @@
               <a href="#">
                 <div class="image"></div>
               </a>
-              <header>
-                <h5>Most popular</h5>
-                <h3><a href="#">
-                    Satoshi Nakaboto: ‘Binance CEO says Bitcoin halving will raise its price’</a>
-                </h3>
-                <ul class="author">
-                  <li><a href="#">Satoshi Nakaboto</a></li>
-                  <li>15 hours ago</li>
-                </ul>
-              </header>
+              <header class="mini-text">            
+                  <p class="popluarity">
+                    Most popular
+                  </p>
+                  <h3>
+                    <a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
+                  </h3>
+                  <div class="mini-mini-text">
+                    <p>Napier Lopez</p>
+                    <p class="hours-ago"> 21 hours ago</p>      
+                  </div>
+                </header>
             </article>
         </div>
         <div class="latest">
@@ -563,17 +575,18 @@
               <a href="#">
                 <div class="image"></div>
               </a>
-              <header>
-                <h5>Most popular</h5>
-                <h3><a href="#">
-                    PSA: Amazon Fresh grocery deliveries are now free for US Prime members</a>
-                </h3>
-                <ul class="author">
-                  <li><a href="#">
-                      Abhimanyu Ghoshal</a></li>
-                  <li>3 months ago</li>
-                </ul>
-              </header>
+              <header class="mini-text">            
+                  <p class="popluarity">
+                    Most popular
+                  </p>
+                  <h3>
+                    <a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
+                  </h3>
+                  <div class="mini-mini-text">
+                    <p>Napier Lopez</p>
+                    <p class="hours-ago"> 21 hours ago</p>      
+                  </div>
+                </header>
             </article>
         </div>
         <div class="latest">
@@ -609,17 +622,18 @@
               <a href="#">
                 <div class="image"></div>
               </a>
-              <header>
-                <h5>Most popular</h5>
-                <h3><a href="#">
-                    Rumor: Call of Duty to launch free 'Warzone' battle royale game as early as February 18</a>
-                </h3>
-                <ul class="author">
-                  <li><a href="#">
-                      Tristan Greene</a></li>
-                  <li>4 days ago</li>
-                </ul>
-              </header>
+              <header class="mini-text">            
+                  <p class="popluarity">
+                    Most popular
+                  </p>
+                  <h3>
+                    <a href="#">Twitter tests labeling and correcting 'harmfully misleading' tweets by politicians</a>
+                  </h3>
+                  <div class="mini-mini-text">
+                    <p>Napier Lopez</p>
+                    <p class="hours-ago"> 21 hours ago</p>      
+                  </div>
+                </header>
             </article>
         </div>
         <div class="latest">
